Ensure breadcrumbs wrap properly
fixes LS-3587
flag = none

Test plan:
 - Create a course
 - Set the course code to something long
 - Set course home page to recent activity
 - Expect the course code breadcrumb to be truncated with ellipsis
 - Resize the page and expect the truncation to shrink if needed
 - Spot check around Canvas to ensure that breadcrumbs look normal

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/305331
QA-Review: Robin Kuss <rkuss@instructure.com>
Product-Review: Jackson Howe <jackson.howe@instructure.com>
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>

--- a/app/stylesheets/components/_breadcrumbs.scss
+++ b/app/stylesheets/components/_breadcrumbs.scss
@@ -40,7 +40,7 @@
       @include fontSize(18px);
       // temporary solution for new styles before crumbs are re-done:
       // we do not want to see the home link
-      &:first-of-type { display: none; }
+      &:first-of-type { visibility: hidden; }
       &:nth-child(2):before { display: none; }
 
       // We need to give the <span class="ellipsis"> a display other than inline so
